test/files/neg/valueclasses-pavlov.check
valueclasses-pavlov.scala:8: error: double definition:
def foo(x: String): String at line 7 and
def foo(x: Box2): String at line 8
have same type after erasure: (x: String)String
  def foo(x: Box2) = "foo(Box2): ok"
      ^
one error found
